# qrclip

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qrclip.desktop  qrclip.qrc  qrclip_app.cpp  qrclip_app.h  qrclip_config.cpp  qrclip_config.h  qrclip_debug.h  qrclip_widget.cpp  qrclip_widget.h  qrclip_window.cpp  qrclip_window.h
